--- a/index.html
+++ b/index.html
@@ -63,16 +63,29 @@
       <div class="lonelyIllustration wow animate__animated animate__fadeInLeft">
         <img src="Website Assets/Group 25.png" alt="Alone Illustation" />
       </div>
+      <div class="block"></div>
       <div class="taskscontent">
         <h1 tabindex="4">
-          And they struggle with some tasks that may be simple for others
+          When simple tasks can become too complicated for seniors who live
+          alone.
         </h1>
+        <p>
+          Let's say you're in San Fransico and your
+          parents/relatives/grandparents are in Chicago and they need help in
+          doing some simple tasks like connecting a printer, loading some
+          groceries, moving furniture. They find it difficult to do it alone
+          because of their age. As a caring part of the family, we feel helpless
+          as we are not there to assist them. Also, it makes the elderly feel
+          more lonely and more disconnected.
+        </p>
       </div>
     </section>
     <section class="tasks">
       <div class="taskscontent">
-        <h1>And they struggle with some tasks that may be simple for others</h1>
+        <h1>Title 1</h1>
+        <p>Lorem Ipsum</p>
       </div>
+      <div class="block"></div>
       <div
         class="lonelyIllustration wow animate__animated animate__fadeInRight"
       >
@@ -83,14 +96,18 @@
       <div class="lonelyIllustration wow animate__animated animate__fadeInLeft">
         <img src="Website Assets/Group 30.png" alt="Prototype image" />
       </div>
+      <div class="block"></div>
       <div class="taskscontent">
-        <h1>And they struggle with some tasks that may be simple for others</h1>
+        <h1>Title 2</h1>
+        <p>Lorem Ipsum</p>
       </div>
     </section>
     <section class="tasks">
       <div class="taskscontent">
-        <h1>And they struggle with some tasks that may be simple for others</h1>
+        <h1>Title 3</h1>
+        <p>Lorem Ipsum</p>
       </div>
+      <div class="block"></div>
       <div
         class="lonelyIllustration wow animate__animated animate__fadeInRight"
       >
@@ -109,15 +126,19 @@
           class="volunteering"
         />
       </div>
+      <div class="block"></div>
       <div class="taskscontent">
-        <h1>And they struggle with some tasks that may be simple for others</h1>
+        <h1>Title 4</h1>
+        <p>Lorem Ipsum</p>
       </div>
     </section>
     <section class="tasks">
       <div class="taskscontent">
-        <h1>And they struggle with some tasks that may be simple for others</h1>
+        <h1>Title 5</h1>
+        <p>Lorem Ipsum</p>
         <button>Get Started</button>
       </div>
+      <div class="block"></div>
       <div
         class="lonelyIllustration wow animate__animated animate__fadeInRight"
       >
