--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
           doing some simple tasks like connecting a printer, loading some
           groceries, moving furniture. They find it difficult to do it alone
           because of their age. As a caring part of the family, we feel helpless
-          as we are not there to assist them. Also, it makes the elderly feel
+          as we are not there to assist them. Also, it can make the elderly feel
           more lonely and more disconnected.
         </p>
       </div>
     </section>
-    <section class="tasks">
+    <!--<section class="tasks">
       <div class="taskscontent">
-        <h1>Title 1</h1>
-        <p>Lorem Ipsum</p>
+        <h1>Happy Hands is here to you lend a hand.</h1>
+        <p>Happy Hands can connect them to a caring volunteer in their area. </p>
       </div>
       <div class="block"></div>
       <div
@@ -91,8 +91,8 @@
       >
         <img src="Website Assets/Group 29.png" alt="Homepage image" />
       </div>
-    </section>
-    <section class="tasks">
+    </section>-->
+    <!--<section class="tasks">
       <div class="lonelyIllustration wow animate__animated animate__fadeInLeft">
         <img src="Website Assets/Group 30.png" alt="Prototype image" />
       </div>
@@ -101,11 +101,11 @@
         <h1>Title 2</h1>
         <p>Lorem Ipsum</p>
       </div>
-    </section>
+    </section>-->
     <section class="tasks">
       <div class="taskscontent">
-        <h1>Title 3</h1>
-        <p>Lorem Ipsum</p>
+        <h1>Happy Hands is here to lend  you a hand.</h1>
+        <p>Happy Hands can connect them to a caring volunteer in their area.</p>
       </div>
       <div class="block"></div>
       <div
@@ -118,8 +118,20 @@
         />
       </div>
     </section>
-    <section class="tasks">
+
+        <section class="tasks">
       <div class="lonelyIllustration wow animate__animated animate__fadeInLeft">
+        <img src="Website Assets/Group 30.png" alt="Prototype image" />
+      </div>
+      <div class="block"></div>
+      <div class="taskscontent">
+        <h1>First Lend Your Hand.. </h1>
+        <p>Become a Happy Hand volunteer and win more heart points which allows you to request help for your distant family member. </p>
+      </div>
+    </section>
+
+    <section class="tasks">
+      <div class="lonelyIllustration wow animate__animated animate__fadeInRight">
         <img
           src="Website Assets/Volunteering Illustration_Artboard 1 copy.png"
           alt="Volunteering Illustation"
@@ -128,14 +140,16 @@
       </div>
       <div class="block"></div>
       <div class="taskscontent">
-        <h1>Title 4</h1>
-        <p>Lorem Ipsum</p>
+        <h1>Request a Hand </h1>
+        <p>Now you feel twice as good because you are not only helping seniors in your area, but indirectly helping your family members from far away. 
+          </p>
       </div>
+      
     </section>
     <section class="tasks">
       <div class="taskscontent">
-        <h1>Title 5</h1>
-        <p>Lorem Ipsum</p>
+        <h1>Join Us Today...</h1>
+        <p>To experience contagious compassion and kindness</p>
         <button>Get Started</button>
       </div>
       <div class="block"></div>
