--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="taskscontent">
         <h1>Join Us Today...</h1>
         <p>To experience contagious compassion and kindness</p>
-        <button>Get Started</button>
+        <a href="https://e3i3ib.axshare.com/"><button>Get Started</button></a>
       </div>
       <div class="block"></div>
       <div
