fixes in css and index

--- a/index.html
+++ b/index.html
@@ -144,12 +144,13 @@
         <p>Now you feel twice as good because you are not only helping seniors in your area, but indirectly helping your family members from far away. 
           </p>
       </div>
-      
+
     </section>
     <section class="tasks">
       <div class="taskscontent">
         <h1>Join Us Today...</h1>
-        <p>To experience contagious compassion and kindness</p>
+        <p>Happy Hands allows you to reach your hand across the country to help 
+          your distant loved one when they need you.To experience contagious compassion and kindness</p>
         <button>Get Started</button>
       </div>
       <div class="block"></div>
