changed content in sections

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
     <section class="tasks">
       <div class="taskscontent">
         <h1>Happy Hands is here to lend  you a hand.</h1>
-        <p>Happy Hands can connect them to a caring volunteer in their area.</p>
+        <p>Happy Hands can connect them to a caring volunteer in their area. Volunteer ID's are verified and screened. 
+          And you can select who gets connected to your senior in need of help. Choose the volunteer who best fits the task, 
+          whether it is simple technical issues or moving something to another room.</p>
       </div>
       <div class="block"></div>
       <div
@@ -126,7 +128,10 @@
       <div class="block"></div>
       <div class="taskscontent">
         <h1>First Lend Your Hand.. </h1>
-        <p>Become a Happy Hand volunteer and win more heart points which allows you to request help for your distant family member. </p>
+        <p>Become a Happy Hand volunteer in your community and earn heart points which allows you to request help for your distant family member. 
+          As soon as Happy Hands confirms your identity and performs proper checks, you will be able to request help for a task for your distant family member. 
+          This in turn allows you to help others via many degrees of separation
+           </p>
       </div>
     </section>
 
