added content in 5th section and added cursor pointer for button

--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
       </div>
       <div class="block"></div>
       <div class="taskscontent">
-        <h1>Request a Hand </h1>
-        <p>Now you feel twice as good because you are not only helping seniors in your area, but indirectly helping your family members from far away. 
+        <h1>Then, Request a Hand </h1>
+        <p>Now you feel twice as good because you are not only helping seniors in your area, 
+          but indirectly helping your family members from far away. The more you volunteer in your community, 
+          the more tasks you can ask help for in your distant family member's behalf. It's that easy. 
           </p>
       </div>
 
