looked into grammatical errors.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section class="landingPage">
         <div class="headings">
           <h1 tabindex="2" id="greatFamilies">
-            Great families depend on each other.
+            Great families depend on each other
           </h1>
           <h1 tabindex="3" id="farApart">But what if they are far apart?</h1>
         </div>
@@ -67,16 +67,14 @@
       <div class="taskscontent">
         <h1 tabindex="4">
           When simple tasks can become too complicated for seniors who live
-          alone.
+          alone
         </h1>
         <p>
-          Let's say you're in San Fransico and your
-          parents/relatives/grandparents are in Chicago and they need help in
-          doing some simple tasks like connecting a printer, loading some
-          groceries, moving furniture. They find it difficult to do it alone
-          because of their age. As a caring part of the family, we feel helpless
-          as we are not there to assist them. Also, it can make the elderly feel
-          more lonely and more disconnected.
+          Let's say you're in San Fransico and your elderly parents/relatives/grandparents are in Chicago 
+          and they need help in doing some simple tasks like connecting a printer, loading some groceries, 
+          moving furniture from one room to another. They find it difficult to do it alone because of their age. 
+          As a caring part of the family, we feel helpless as we are not there to assist them. 
+          Also, it can make the elderly feel more lonely and more disconnected.
         </p>
       </div>
     </section>
@@ -104,7 +102,7 @@
     </section>-->
     <section class="tasks">
       <div class="taskscontent">
-        <h1>Happy Hands is here to lend  you a hand.</h1>
+        <h1>Happy Hands is here to lend  you a hand</h1>
         <p>Happy Hands can connect them to a caring volunteer in their area. Volunteer ID's are verified and screened. 
           And you can select who gets connected to your senior in need of help. Choose the volunteer who best fits the task, 
           whether it is simple technical issues or moving something to another room.</p>
@@ -128,9 +126,9 @@
       <div class="block"></div>
       <div class="taskscontent">
         <h1>First Lend Your Hand.. </h1>
-        <p>Become a Happy Hand volunteer in your community and earn heart points which allows you to request help for your distant family member. 
-          As soon as Happy Hands confirms your identity and performs proper checks, you will be able to request help for a task for your distant family member. 
-          This in turn allows you to help others via many degrees of separation
+        <p>Become a Happy Hand volunteer in your community and earn heart points that allow you to request help for your 
+          distant family member. As soon as Happy Hands confirms your identity and performs proper checks, you will be able to request 
+          help for a task for your distant family member. This in turn allows you to help others via many degrees of separation.
            </p>
       </div>
     </section>
@@ -146,9 +144,8 @@
       <div class="block"></div>
       <div class="taskscontent">
         <h1>Then, Request a Hand </h1>
-        <p>Now you feel twice as good because you are not only helping seniors in your area, 
-          but indirectly helping your family members from far away. The more you volunteer in your community, 
-          the more tasks you can ask help for in your distant family member's behalf. It's that easy. 
+        <p>Now you feel twice as good because you are not only helping seniors in your area but indirectly helping your family members from far away. 
+          The more you volunteer in your community, the more tasks you can ask for help for your distant family member's behalf. It's that easy.  
           </p>
       </div>
 
@@ -157,8 +154,8 @@
       <div class="taskscontent">
         <h1>Join Us Today...</h1>
 
-        <p>Happy Hands allows you to reach your hand across the country to help 
-          your distant loved one when they need you.To experience contagious compassion and kindness</p>
+        <p>Happy Hands allows you to reach your hand across the country to help your 
+          distant loved one when they need you. To experience contagious compassion and kindness.</p>
         <a href="https://e3i3ib.axshare.com/"><button>Get Started</button></a>
 
       </div>
