last section modified

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <h1>Join Us Today...</h1>
 
         <p>Happy Hands allows you to reach your hand across the country to help your 
-          distant loved one when they need you. To experience contagious compassion and kindness.</p>
+          distant loved one when they need you. It's time to share your kindness and experience contagious compassion.</p>
         <a href="https://e3i3ib.axshare.com/"><button>Get Started</button></a>
 
       </div>
